Fix alignment

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -68,7 +68,7 @@ h1,h2,h3,h4,h5 {
 .m-split {
   display: inline-block;
   width: 598px;
-  padding: 0 3.2em 0 2.2em;
+  padding: 0 2.4em 0 2.2em;
 }
 
 .bus-route--container {
